--- a/Agenda/Agenda/nbproject/project.properties
+++ b/Agenda/Agenda/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 ant.customtasks.libs=JWSAntTasks
+application.splash=/home/rodri/Downloads/screen.jpg
 application.title=Agenda
 application.vendor=rodri
 build.classes.dir=${build.dir}/classes
@@ -468,7 +469,7 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
